# pico-experiments

./: .gitignore  README.md
blink/: CMakeLists.txt  blink.c
button/: CMakeLists.txt  main.cc  zc.hh
common-tools/: CMakeLists.txt  main.cc
common-tools/common/: logger.cc  shell.hh
epanel-beta/: CMakeLists.txt  com.cc  com.hh  main.cc  state.cc  state.hh
epanel-beta/common/: application.cc  application.hh  logger.cc  logger.hh  non_copyable.hh  service.hh  shell.cc  status_blink.cc  status_blink.hh
internal-temp/: CMakeLists.txt  main.cc
mosfet/: CMakeLists.txt  callback.hh  main.cc  zc.cc
pio/: CMakeLists.txt  hello.pio  main.c
shell/: main.cc
triac/: CMakeLists.txt  main.cc
zc/: CMakeLists.txt  main.c  main.cc  measures.txt
